@@ -23,6 +23,7 @@
 /*
  *  SDL_RWops support for python objects
  */
+#define NO_PYGAME_C_API
 #define PYGAMEAPI_RWOBJECT_INTERNAL
 #include "pygame.h"
 
@@ -437,8 +438,6 @@ void initrwobject(void)
 {
 	PyObject *module, *dict, *apiobj;
 	static void* c_api[PYGAMEAPI_RWOBJECT_NUMSLOTS];
-
-	PyGAME_C_API[0] = PyGAME_C_API[0]; /*this cleans a compiler warning*/
 
 	/* Create the module and add the functions */
 	module = Py_InitModule3("rwobject", rwobject__builtins__, "SDL_RWops support");
