@@ -4,6 +4,9 @@
 # BREAK = change breaks existing code
 # BUG	= fixed a bug that was (or could have been) crashing
 
+February 10, 2002
+        pygame.init() not required for proper cleanup [BUG]
+
 February 8, 2002
 	Rect and Surface subclassable types
 
